finish edit feature in prenatal records

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <!-- Left Side - Background Image Section -->
   <div
     class="relative flex flex-col items-center justify-center p-12 text-center text-slate-200 bg-cover  bg-no-repeat rounded-lg shadow-2xl w-5/6 hidden md:flex"
-    style="background-image: url('assets/images/supermama.png');">
+    style="background-image: url('assets/images/loginbg.jpg');">
   </div>
 
 <!-- Right Side - Login Form -->
