--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,7 @@
 <div class="min-h-screen w-full flex flex-col bg-slate-200 text-gray-800"
 >
   <!-- Layout Grid -->
-  <div class="flex flex-1 overflow-hidden bg-slate-200 bg-cover"
+  <div class="flex flex-1 overflow-hidden bg-slate-200 bg-cover bg-opacity-65"
   style="background-image: url('assets/images/yep.jpg');">
 
     <!-- Left Side Panel -->
