--- a/src/app/pages/forms/prenatal-edit-record/prenatal-edit-record.component.html
+++ b/src/app/pages/forms/prenatal-edit-record/prenatal-edit-record.component.html
@@ -21,14 +21,8 @@
   </form>
 
   <!-- Action Buttons -->
-  <div class="flex justify-end gap-4 pt-4">
-    <button
-      type="button"
-      class="bg-gray-200 hover:bg-gray-300 text-gray-700 px-4 py-2 rounded-xl transition"
-      (click)="onCancel()"
-    >
-      Cancel
-    </button>
+  <div class="flex justify-end gap-4 pt-4 justify-center">
+
     <button
       type="button"
       class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-2 rounded-xl transition"
