--- a/src/app/pages/forms/prenatal-form/prenatal-form.component.html
+++ b/src/app/pages/forms/prenatal-form/prenatal-form.component.html
@@ -138,12 +138,16 @@
 
   <!-- Emergency Info Form -->
   <form
+
     *ngIf="showEmergency"
     [formGroup]="emergencyForm"
     (ngSubmit)="openFinalConfirmationModal()"
     class="space-y-6 mt-10 bg-white p-8 rounded-2xl shadow-lg max-w-4xl mx-auto transition-all duration-300 ease-in-out"
     novalidate
   >
+  <div *ngIf="notificationMessage" [ngClass]="notificationType === 'success' ? 'bg-green-500 text-white border-green-300' : 'bg-red-100 text-red-700 border-red-300'" class="mb-4 p-4 rounded-xl border text-sm font-medium shadow-sm">
+    {{ notificationMessage }}
+  </div>
     <h2 class="text-2xl font-bold text-red-600 border-b border-red-200 pb-2">
       Emergency Information
     </h2>
