--- a/src/app/pages/prenatal/mothers-pregnancy-record/mothers-pregnancy-record.component.html
+++ b/src/app/pages/prenatal/mothers-pregnancy-record/mothers-pregnancy-record.component.html
@@ -21,6 +21,7 @@
 <!-- Record Prenatal Container -->
 <div class="p-6 bg-white rounded-xl shadow-lg max-h-full">
   <div class="flex justify-between items-center mb-4">
+
     <h2 class="text-2xl font-semibold text-blue-600">
       {{ showSubmittedRecords ? 'Submitted Records' : 'Record Prenatal' }}
     </h2>
@@ -98,7 +99,27 @@
 <div *ngIf="noRecordsFound && !loading" class="text-center text-red-500 font-semibold mb-4">
   No prenatal records found.
 </div>
+<ng-container *ngIf="motherData.uid === currentUserUid; else noPermission">
+  <button
+  *ngIf="isRecordsLoaded && records && records.length > 0"
+  (click)="exportToExcel()"
+  class="px-5 py-2 rounded-xl mb-4 text-white bg-green-600 hover:bg-green-700 shadow-md transition-all duration-300 text-base font-semibold flex items-center gap-2"
+>
+  Export to Excel
+</button>
 
+<div *ngIf="!records || records.length === 0" class="text-center text-gray-600 font-medium py-4">
+  No prenatal records available.
+</div>
+</ng-container>
+
+<ng-template #noPermission>
+  <span
+    class="px-4 py-2 text-sm font-medium text-red-700 border border-red-400 rounded-lg bg-red-100 hover:bg-red-200 transition-colors duration-300"
+  >
+    No permission to export.
+  </span>
+</ng-template>
 <!-- Prenatal Records List -->
 <div *ngFor="let record of records; let i = index" class="bg-white shadow p-4 rounded-lg mb-3 border border-blue-100">
   <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-2">
