--- a/src/app/shared/left-side-panel/left-side-panel.component.html
+++ b/src/app/shared/left-side-panel/left-side-panel.component.html
@@ -13,17 +13,17 @@
 
   <!-- Navigation -->
   <nav class="flex flex-col space-y-3 mt-4">
-    <button routerLink="/ob-gyne/appointments"
+    <button routerLink="/HCP/appointments"
       class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
       Appointments
     </button>
-    <button routerLink="/ob-gyne/prenatal" routerLinkActive="active"
+    <button routerLink="/HCP/prenatal" routerLinkActive="active"
       class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
       Prenatal
     </button>
-    <button routerLink="/ob-gyne/children" routerLinkActive="active"
+    <button routerLink="/HCP/child-immunization" routerLinkActive="active"
       class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
-      Children
+      Immunization
     </button>
     <button
       class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
@@ -74,22 +74,22 @@
 
 <!-- Navigation -->
 <nav class="flex flex-col space-y-3 md:w-0 md:h-0 md:overflow-hidden">
-  <button routerLink="/ob-gyne/appointments"
+  <button routerLink="/HCP/appointments"
   class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
   Appointments
 </button>
-<button routerLink="/ob-gyne/prenatal" routerLinkActive="active"
+<button routerLink="/HCP/prenatal"
   class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
   Prenatal
 </button>
-<button routerLink="/ob-gyne/children" routerLinkActive="active"
+
+<button routerLink="/HCP/child-immunization"
   class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
-  Children
+  Immunization
 </button>
 <button
   class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition shadow">
   Messages
 </button>
 </nav>
-
 </div>
