--- a/src/app/pages/appointments/appointments.component.html
+++ b/src/app/pages/appointments/appointments.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col flex-grow justify-center items-center min-h-screen px-4">
+<div class="flex flex-col flex-grow   items-center min-h-screen px-4">
   <div class="p-6 bg-white rounded-lg shadow-lg w-full max-w-7xl">
     <h2 class="text-4xl md:text-6xl font-bold text-teal-600 mb-4 text-center">
       Immunization & Prenatal Schedule
